# social-sim

./: .gitignore  pyproject.toml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css
client/src/api/: client.ts  types.ts
client/src/components/charts/: DistributionChart.tsx  GiniChart.tsx  WealthChart.tsx
client/src/components/layout/: Header.tsx
client/src/components/panels/: EventLog.tsx  PolicyPanel.tsx  ScoreBar.tsx  StatsPanel.tsx
client/src/components/screens/: GameScreen.tsx  ResultScreen.tsx  StartScreen.tsx
client/src/hooks/: useGame.ts
src/social_sim/: __init__.py
src/social_sim/agents/: __init__.py  person.py
src/social_sim/core/: __init__.py  agent.py  model.py
src/social_sim/game/: engine.py  events.py  schemas.py  scoring.py  store.py
src/social_sim/models/: __init__.py  basic_economy.py
src/social_sim/web/: api.py  app.py
src/social_sim/web/static/: style.css
src/social_sim/web/templates/: base.html  index.html
src/social_sim/web/templates/partials/: results.html
tests/: test_basic.py  test_game_engine.py  test_game_scoring.py
