[project]
name = "social-sim"
version = "0.1.0"
description = "Social simulation platform for policy and institutional analysis"
requires-python = ">=3.11"
dependencies = [
    "mesa>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "networkx>=3.2.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
